syntax = "proto3";

package learnmark.api.general.v1;

option go_package = "github.com/learnmark/learnmark/api/general/v1";

message Version {
  string version = 1;
  string git_commit = 2;
  string build_date = 3;
  string go_version = 4;
}

message VersionRes {
  Version version = 1;
}
